# drug-data-demo

./: .gitignore  README.md  build_schema.py  config.py  ingest_fda.py  make_context.py  preview_to_console.py  preview_to_html.py  pyproject.toml  requirements.txt  run_ingest.sh  utils.py  uuid_helpers.py  validate.py
docs/: index.html
gx/expectations/: .ge_store_backend_id
schema/: drug_indication_v0.1.0.json  drug_moa_v0.1.0.json  drug_molecule_v0.1.0.json  drugs_v0.1.0.json  indications_v0.1.0.json  moas_v0.1.0.json  molecules_v0.1.0.json
scripts/: run_ingest.sh
src/drug_data_demo/: utils.py
src/drug_data_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/drug_data_demo/pipelines/: build_schema.py  ingest_fda.py  preview_to_console.py  preview_to_html.py  validate.py
