[project]
name = "drug-data-demo"
version = "0.1.0"
description = "Demo pipeline: openFDA → ETL → S3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "pyarrow>=14.0",
  "s3fs>=2024.3",
  "requests>=2.32",
  "jsonschema>=4.24",
  "tabulate>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
